Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm
@@ -253,14 +253,20 @@ MediaPlayer::SupportsType MediaPlayerPrivateMediaSourceAVFObjC::supportsType(con
     if (!parameters.isMediaSource)
         return MediaPlayer::SupportsType::IsNotSupported;
 
+    String outputCodecs = parameters.type.parameter(ContentType::codecsParameter());
+    ASSERT(!outputCodecs.isEmpty());
+    if ([PAL::getAVStreamDataParserClass() respondsToSelector:@selector(outputMIMECodecParameterForInputMIMECodecParameter:)])
+        outputCodecs = [PAL::getAVStreamDataParserClass() outputMIMECodecParameterForInputMIMECodecParameter:outputCodecs];
+
+    String extendedType = makeString(parameters.type.containerType(), "; codecs=\"", outputCodecs, "\"");
     auto supported = MediaPlayer::SupportsType::IsNotSupported;
     auto& streamDataParserCache = AVStreamDataParserMIMETypeCache::singleton();
     if (streamDataParserCache.isAvailable())
-        supported = streamDataParserCache.canDecodeType(parameters.type.raw());
+        supported = streamDataParserCache.canDecodeType(extendedType);
     else {
         auto& assetCache = AVAssetMIMETypeCache::singleton();
         if (assetCache.isAvailable())
-            supported = assetCache.canDecodeType(parameters.type.raw());
+            supported = assetCache.canDecodeType(extendedType);
     }
 
     if (supported != MediaPlayer::SupportsType::IsSupported)
